--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -22,6 +22,7 @@ pillow==11.3.0
 pydantic==2.12.4
 pydantic_core==2.41.5
 python-dotenv==1.2.1
+python-multipart==0.0.20
 PyYAML==6.0.3
 regex==2025.11.3
 scikit-learn==1.6.1
